fixed spacing

--- a/styles/scss/partials/_about.scss
+++ b/styles/scss/partials/_about.scss
@@ -1,7 +1,3 @@
-#about {
-	margin: 2% auto;
-}
-
 .bio {
 	width: 100%;
 	display: flex;
