--- a/styles/scss/partials/_globalStyles.scss
+++ b/styles/scss/partials/_globalStyles.scss
@@ -70,3 +70,9 @@ main {
 		border-bottom: 3px solid $accentColor;
 	}
 }
+
+#about,
+#skills,
+#projects {
+	margin: 50px auto;
+}
