--- a/styles/scss/partials/_mediaQueries.scss
+++ b/styles/scss/partials/_mediaQueries.scss
@@ -57,7 +57,7 @@
 @media (max-width: 600px) {
 	// Header
 	header {
-		background-size: contain;
+		background-position: center;
 	}
 	.navbar {
 		ul {
@@ -149,7 +149,7 @@
 	// Header
 	header {
 		background-position: center;
-		background-position: contain;
+		background-size: cover;
 	}
 	.intro {
 		h2 {
