--- a/styles/scss/partials/_skills.scss
+++ b/styles/scss/partials/_skills.scss
@@ -1,5 +1,5 @@
 #skills {
-	margin-top: 2%;
+	
 	background-color: $secondaryAccentColor;
 	border-top: 3px dotted $accentColor;
 	border-bottom: 3px dotted $accentColor;
